--- a/src/renderer/src/assets/css/atom.css
+++ b/src/renderer/src/assets/css/atom.css
@@ -1,13 +1,39 @@
+/* 外部字体引入 */
+@font-face {
+  font-family: 'DINpro';
+  src: url('../font/DINpro-black.woff2') format('woff2'), url('../font/DINpro-black.woff') format('woff');
+  font-weight: 900;
+}
+@font-face {
+  font-family: 'DINpro';
+  src: url('../font/DINpro-bold.woff2') format('woff2'), url('../font/DINpro-bold.woff') format('woff');
+  font-weight: 700;
+}
+@font-face {
+  font-family: 'DINpro';
+  src: url('../font/DINpro-medium.woff2') format('woff2'), url('../font/DINpro-medium.woff') format('woff');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'DINpro';
+  src: url('../font/DINpro-regular.woff2') format('woff2'), url('../font/DINpro-regular.woff') format('woff');
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'DINpro';
+  src: url('../font/DINpro-light.woff2') format('woff2'), url('../font/DINpro-light.woff') format('woff');
+  font-weight: 100;
+}
+
 /* 基础属性定义 */
 :root {
   /* 基础字号定义 */
   --base-font-size: 15px;
 
   /* 字体家族定义 */
-  --font_family: DIN, Helvetica Neue, Helvetica, Ubuntu, -apple-system,
-    BlinkMacSystemFont, Segoe UI, Roboto, Hiragino Sans GB, Microsoft YaHei UI,
-    Microsoft YaHei, Source Han Sans CN, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+  --font_family: DINpro, Helvetica Neue, Helvetica, Ubuntu, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Source Han Sans CN,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
   /* 数量定义 */
   --number_of_grids: 12;
@@ -35,10 +61,12 @@
 /* 第二个root用于复合属性定义 */
 :root {
   /* 宽度定义 */
-  --typeArea: calc( var(--column) * var(--number_of_grids) + var(--gutter) * calc(  var(--number_of_grids) - 1 ) );
+  --typeArea: calc(
+    var(--column) * var(--number_of_grids) + var(--gutter) * calc(var(--number_of_grids) - 1)
+  );
 }
 
-body{
+body {
   --invisible: rgba(0, 0, 0, 0);
 }
 
@@ -68,7 +96,7 @@ body.light {
   --white-10: rgba(255, 255, 255, 0.1);
   --main-color-6: #f0e1de;
   --main-color-5: #b6ebee;
-  --bg-okki:#ECF0F3;
+  --bg-okki: #ecf0f3;
   --bg-info: #dcf6fa;
   --bg-successful: #ddf7e3;
   --bg-warring: #fdebe0;
@@ -107,14 +135,16 @@ body.light {
   --shadow-nav-2: 0px 4px 8px var(--small-shadow-color);
   --shadow-big: 0px 20px 50px 0px var(--big-shadow-color);
   --shadow-small: 0px 8px 16px 0px var(--small-shadow-color);
-  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),0px 0px 0px 1px var(--main-color-3);
+  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),
+    0px 0px 0px 1px var(--main-color-3);
   --inputbox-dangreous-effect: 0px 0px 0px 3px var(--bg-dargerous), 0px 0px 0px 1px var(--dangerous);
   --main-button-shadow: 0px 4px 8px 0px var(--main-color-3-30);
   --tab-active-underline: 0px 4px 0px 0px var(--main-color-3);
 }
 
 /* .grey基础色定义 */
-body.grey {/* 颜色定义 */
+body.grey {
+  /* 颜色定义 */
 
   /* 文本颜色 */
   --title-color-1: #383646;
@@ -176,14 +206,16 @@ body.grey {
   --shadow-nav-2: 0px 4px 8px var(--small-shadow-color);
   --shadow1: 0px 20px 50px 0px var(--big-shadow-color);
   --shadow0: 0px 8px 16px 0px var(--small-shadow-color);
-  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),0px 0px 0px 1px var(--main-color-3);
+  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),
+    0px 0px 0px 1px var(--main-color-3);
   --inputbox-dangreous-effect: 0px 0px 0px 3px var(--bg-dargerous), 0px 0px 0px 1px var(--dangerous);
   --main-button-shadow: 0px 4px 8px 0px var(--main-color-3-30);
   --tab-active-underline: 0px 4px 0px 0px var(--main-color-3);
 }
 
 /* .black基础色定义 */
-body.black {/* 颜色定义 */
+body.black {
+  /* 颜色定义 */
 
   /* 文本颜色 */
   --title-color-1: #383646;
@@ -244,7 +276,8 @@ body.black {
   --shadow-nav-2: 0px 4px 8px var(--small-shadow-color);
   --shadow1: 0px 20px 50px 0px var(--big-shadow-color);
   --shadow0: 0px 8px 16px 0px var(--small-shadow-color);
-  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),0px 0px 0px 1px var(--main-color-3);
+  --inputbox-hover-effect: 0px 0px 0px 3px var(--main-color-3-10),
+    0px 0px 0px 1px var(--main-color-3);
   --inputbox-dangreous-effect: 0px 0px 0px 3px var(--bg-dargerous), 0px 0px 0px 1px var(--dangerous);
   --main-button-shadow: 0px 4px 8px 0px var(--main-color-3-30);
   --tab-active-underline: 0px 4px 0px 0px var(--main-color-3);
