--- a/src/renderer/src/assets/css/layout.css
+++ b/src/renderer/src/assets/css/layout.css
@@ -17,7 +17,7 @@
 }
 
 html {
-  font: normal var(--base-font-size) / 1.5 var(--font_family);
+  font: 300 var(--base-font-size) / 1.5 var(--font_family);
   background-color: transparent;
 }
 
