--- a/src/renderer/src/assets/css/style.css
+++ b/src/renderer/src/assets/css/style.css
@@ -1,5 +1,6 @@
 /* 样式 */
 @import url(normalize.css);/* 规范化样式 */
+@import url(font.css);/* 引入外部字体 */
 @import url(atom.css);/* 原子样式库 */
 
 /* 布局规则 */
@@ -12,3 +13,4 @@
 @import url(./special/VersionInfo.css);
 @import url(./special/Menu.css);
 @import url(./special/Tloam.css);
+@import url(./special/WoniuSec.css);
