--- a/src/renderer/src/assets/css/special/BannerBox.css
+++ b/src/renderer/src/assets/css/special/BannerBox.css
@@ -5,18 +5,26 @@
 
 #BannerBox .top_nav img {
   display: block;
-  opacity: 0;
+  opacity: 1;
 }
 
 #BannerBox .banner_area {
+  position: relative;
+  flex-direction: row;
   width: 100%;
   height: 640px;
-  background: url(../img/banner/border.svg) 0% 0% / contain no-repeat;
+  background: url(../../img/banner/border.svg) 0% 0% / contain no-repeat;
+}
+
+#embed-host,
+#scene-explorer-host,
+#inspector-host{
+  position: absolute !important;
 }
 
 #BannerBox .contrast {
   position: absolute;
-  top: 100px;
+  /* top: 100px; */
   left: 0px;
   opacity: 0;
   pointer-events: none;
