--- a/src/renderer/src/assets/css/special/BannerBox.css
+++ b/src/renderer/src/assets/css/special/BannerBox.css
@@ -18,20 +18,19 @@
 
 #embed-host,
 #scene-explorer-host,
-#inspector-host{
+#inspector-host {
   position: absolute !important;
 }
 
 #BannerBox .contrast {
   position: absolute;
-  /* top: 100px; */
   left: 0px;
   opacity: 0;
   pointer-events: none;
   z-index: 1;
 }
 
-#BannerBox #BannerCanvas {
+/* #BannerBox #BannerCanvas {
   mask-image: url(../img/banner/mask.svg);
   -webkit-mask-image: url(../img/banner/mask.svg);
   mask-size: contain;
@@ -41,6 +40,12 @@
   -webkit-mask-position: 0px 0.644vw;
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
+} */
+
+@font-face {
+  font-family: 'DINproaa';
+  src: url('../font/DINpro-regular.woff2') format('woff2'), url('../font/DINpro-regular.woff') format('woff');
+  font-weight: 300;
 }
 
 #BannerBox .loading_progress {
@@ -49,6 +54,7 @@
   top: calc(100px + 2vw);
   font: normal 12px/18px var(--font_family);
   color: var(--white-30);
+  font-family: 'DINproaa';
 }
 
 #BannerBox .pfs-info {
