--- a/src/renderer/src/assets/css/special/BannerBox.css
+++ b/src/renderer/src/assets/css/special/BannerBox.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   width: 100%;
   height: 640px;
-  background: url(../../img/banner/border.svg) 0% 0% / contain no-repeat;
+  background: url(../../../public/img/banner/border.svg) 0% 0% / contain no-repeat;
 }
 
 #embed-host,
@@ -31,8 +31,8 @@
 }
 
 /* #BannerBox #BannerCanvas {
-  mask-image: url(../img/banner/mask.svg);
-  -webkit-mask-image: url(../img/banner/mask.svg);
+  mask-image: url(../../../public/img/banner/mask.svg);
+  -webkit-mask-image: url(../../../public/img/banner/mask.svg);
   mask-size: contain;
   -webkit-mask-size: contain;
   position: relative;
