--- a/src/renderer/src/assets/css/special/GS.css
+++ b/src/renderer/src/assets/css/special/GS.css
@@ -1,7 +1,7 @@
 #GS {
   width: 100%;
   height: 100%;
-  /* background: url(../img/page/bg/bg.svg) no-repeat center; */
+  /* background: url(../../../public/img/page/bg/bg.svg) no-repeat center; */
   background-color: rgba(142, 211, 83, 1);
   background-color: var(--bg-okki);
   display: flex;
