--- a/src/renderer/src/assets/css/special/BannerBox.css
+++ b/src/renderer/src/assets/css/special/BannerBox.css
@@ -10,7 +10,6 @@
 
 #BannerBox .banner_area {
   position: relative;
-  flex-direction: row;
   width: 100%;
   height: 650px;
   background: url(../../../public/img/banner/border.svg) 0% 0% / contain no-repeat;
@@ -24,8 +23,10 @@
 
 #BannerBox .contrast {
   position: absolute;
-  left: 0px;
-  opacity: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 0.3;
   pointer-events: none;
   z-index: 1;
 }
