--- a/src/renderer/src/assets/css/special/Tloam.css
+++ b/src/renderer/src/assets/css/special/Tloam.css
@@ -3,5 +3,12 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: rgba(142, 211, 83, 1);
+}
+
+#toramCanvas{
+  width: 1280px;
+  height: 400px;
 }
