--- a/src/renderer/src/assets/css/style.css
+++ b/src/renderer/src/assets/css/style.css
@@ -12,5 +12,5 @@
 @import url(./special/BannerBox.css);
 @import url(./special/VersionInfo.css);
 @import url(./special/Menu.css);
-@import url(./special/Tloam.css);
+@import url(./special/Toram.css);
 @import url(./special/WoniuSec.css);
