--- a/src/renderer/src/assets/css/special/Toram.css
+++ b/src/renderer/src/assets/css/special/Toram.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: rgba(142, 211, 83, 1);
 }
 
