--- a/src/renderer/src/assets/css/special/BannerBox.css
+++ b/src/renderer/src/assets/css/special/BannerBox.css
@@ -25,6 +25,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
+  /* transform: translateX(-64%) translateY(-50%) scale(1.44); */
   transform: translateX(-50%) translateY(-50%);
   opacity: 0;
   pointer-events: none;
