--- a/src/renderer/src/assets/css/special/LoadingAnimation.css
+++ b/src/renderer/src/assets/css/special/LoadingAnimation.css
@@ -5,17 +5,18 @@
 }
 
 #loadingBox {
-  --overallWidth: 20vw;
-  --overallHeight: 20vw;
+  --overallWidth: calc( 1920px / 5);
+  --overallHeight: calc( 1920px / 5);
   position: fixed;
-  left: 40vw;
-  top: calc(50vh - 10vw);
+  left: 50vw;
+  top: 50vh;
+  transform: translateX(-50%) translateY(-50%);
   width: var(--overallWidth);
   height: var(--overallHeight);
   mask-image: url(../../../public/img/page/loading/Union.svg);
   -webkit-mask-image: url(../../../public/img/page/loading/Union.svg);
-  mask-position: 0 0;
-  -webkit-mask-position: 0 0;
+  mask-position: center center;
+  -webkit-mask-position: center center;
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
 }
