--- a/src/renderer/src/assets/css/componentsCss/accessory/Filing.css
+++ b/src/renderer/src/assets/css/componentsCss/accessory/Filing.css
@@ -1,11 +1,11 @@
 #filing_info {
   display: block;
   position: absolute;
-  left: 20px;
-  bottom: 20px;
+  right: 2vw;
+  bottom: 2vh;
   color: var(--main-color-2);
   padding: 5px 10px;
   background-color: var(--bg-white-30);
-  border-radius: 3px;
+  border-radius: var(--border-radius-small);
   text-decoration: none;
 }
