--- a/src/renderer/src/assets/css/componentsCss/accessory/VersionInfo.css
+++ b/src/renderer/src/assets/css/componentsCss/accessory/VersionInfo.css
@@ -1,6 +1,6 @@
 #version_info {
   position: absolute;
-  left: 2vw;
+  right: 2vw;
   top: 2vw;
   font: normal 12px/18px var(--font_family);
   color: var(--white-30);
