--- a/src/renderer/src/assets/css/layout.css
+++ b/src/renderer/src/assets/css/layout.css
@@ -174,3 +174,33 @@ p {
   mask-image: unset;
   -webkit-mask-image: unset;
 }
+
+#title {
+  z-index: 2;
+  position: absolute;
+  left: 2vw;
+  top: 2vw;
+  max-width: 20vw;
+  pointer-events: none;
+}
+
+#title #mian{
+  font: normal 32px/48px var(--font_family);
+  color: var(--title-color-1);
+}
+
+#title #mian::after{
+  content: '';
+  position: relative;
+  margin-block-start: 1vh;
+  margin-block-end: 1vh;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--secondary-text-color);
+}
+
+#title #info{
+  font: normal 16px/24px var(--font_family);
+  color: var(--title-color-2);
+}
