--- a/src/renderer/src/assets/css/style.css
+++ b/src/renderer/src/assets/css/style.css
@@ -15,3 +15,4 @@
 @import url(./componentsCss/main/BannerBox.css);
 @import url(./componentsCss/main/ColorComputeBox.css);
 @import url(./componentsCss/main/Index.css);
+@import url(./componentsCss/main/MatrixEffectBox.css);
