--- a/src/renderer/src/assets/css/componentsCss/main/MatrixEffectBox.css
+++ b/src/renderer/src/assets/css/componentsCss/main/MatrixEffectBox.css
@@ -1,30 +1,36 @@
-#MatrixEffectBox {
-  background-color: rgb(5, 15, 40);
-  font-family: Courier New;
-  padding: 0;
-  margin: 0;
+#MatrixEffectBox .firstScreen{
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  /* border: 2px solid yellow; */
 }
-#effectCanvas {
-  display: block;
+
+#MatrixEffectBox img.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
-#notC {
-  display: none;
-}
-#canvas-wrap {
-  position: relative;
-  height: 100%;
-}
-#canvas-wrap canvas {
+
+#MatrixEffectBox img.illustration{
+  width: 100%;
   position: absolute;
+  left: 0;
+}
+
+#MatrixEffectBox canvas {
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 0;
+  pointer-events: none;
 }
 
-#overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 0;
-  z-index: 50;
+#MatrixEffectBox canvas.effectCanvas {
+  display: block;
+}
+
+#MatrixEffectBox canvas.templateCanvas {
+  display: none;
 }
